Changed randomize function

--- a/main.ipynb
+++ b/main.ipynb
@@ -258,6 +258,8 @@
     "## 2. CINQUE UTENTI RANDOM FOLLOWERS\n",
     "Scegliete 5 utenti followers a caso tra quelli di ciascuno dei cinque account e\n",
     "scaricate ulteriori 10 utenti followers (followers dei followers)\n",
+    "\n",
+    "\n",
     "\n"
    ],
    "metadata": {
@@ -269,29 +271,84 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "outputs": [],
    "source": [
     "import random\n",
     "\n",
     "def randomize(read_path, save_path):\n",
     "    data_account = read_json(read_path)\n",
-    "    random_account = []\n",
-    "    number_of_account = len(data_account)\n",
-    "    print(f\"Followers: {number_of_account}\")\n",
-    "    for x in range(5):\n",
-    "        rand = random.randint(0,number_of_account-1)\n",
-    "        #pp.pprint(rand)\n",
-    "        pp.pprint(data_account[rand])\n",
-    "        if data_account[rand] not in random_account:\n",
-    "            random_account.append(data_account[rand])\n",
-    "        else:\n",
-    "            x = x-1\n",
-    "\n",
-    "    serialize_json(data_folder, save_path, random_account)\n",
-    "\n",
-    "\n",
-    "randomize(\"data/KevinRoiteroFollowers.json\", \"KevinRoiteroRandomFollowers.json\")\n"
+    "    ##number_of_account = len(data_account)\n",
+    "    ##print(f\"Followers: {number_of_account}\")\n",
+    "    rand = random.sample(data_account, 5)\n",
+    "    pp.pprint(rand)\n",
+    "    serialize_json(data_folder, save_path, rand)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Data read from path: data/KevinRoiteroFollowers.json\n",
+      "[{'id': 954235769618538496,\n",
+      "  'location': '',\n",
+      "  'name': 'Reena',\n",
+      "  'screen_name': 'hiijjournal1'},\n",
+      " {'id': 16868154,\n",
+      "  'location': 'Utrecht, The Netherlands',\n",
+      "  'name': '@arjen@idf.social',\n",
+      "  'screen_name': 'arjenpdevries'},\n",
+      " {'id': 3240349167,\n",
+      "  'location': '',\n",
+      "  'name': 'Travel to',\n",
+      "  'screen_name': 'travelto_to'},\n",
+      " {'id': 3083042302,\n",
+      "  'location': '',\n",
+      "  'name': 'Only Girls Know',\n",
+      "  'screen_name': 'girlsonlyknow1'},\n",
+      " {'id': 2208838112,\n",
+      "  'location': 'Pordenone - Friul - Italy',\n",
+      "  'name': 'Luca Pighin',\n",
+      "  'screen_name': 'LucaPighin92'}]\n",
+      "Data serialized to path: data/KevinRoiteroRandomFollowers.json\n",
+      "Data read from path: data/KevinRoiteroFollowings.json\n",
+      "[{'id': 25134469,\n",
+      "  'location': 'Glasgow',\n",
+      "  'name': 'Leif Azzopardi',\n",
+      "  'screen_name': 'leifos'},\n",
+      " {'id': 2322434384,\n",
+      "  'location': '',\n",
+      "  'name': 'HCOMP Conference',\n",
+      "  'screen_name': 'hcomp_conf'},\n",
+      " {'id': 15750573,\n",
+      "  'location': 'Chiusaforte',\n",
+      "  'name': 'Michael Soprano',\n",
+      "  'screen_name': 'Miccighel_'},\n",
+      " {'id': 296459271,\n",
+      "  'location': 'Mountain View, CA',\n",
+      "  'name': 'Google Doodles',\n",
+      "  'screen_name': 'GoogleDoodles'},\n",
+      " {'id': 2382305514,\n",
+      "  'location': '',\n",
+      "  'name': 'Human Computation',\n",
+      "  'screen_name': 'HCjnl'}]\n",
+      "Data serialized to path: data/KevinRoiteroRandomFollowings.json\n"
+     ]
+    }
+   ],
+   "source": [
+    "randomize(\"data/KevinRoiteroFollowers.json\", \"KevinRoiteroRandomFollowers.json\")\n",
+    "randomize(\"data/KevinRoiteroFollowings.json\", \"KevinRoiteroRandomFollowings.json\")"
    ],
    "metadata": {
     "collapsed": false,
